--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>react_counter</title>
-  </head>
+  <script defer src="bundle33b011f85e56fe4c2de4.js"></script><link href="styles-33b011f85e56fe4c2de4.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
   </body>
